self-traning/manifests/ct-dummy/ct-dummy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct-dummy
  namespace: ct-dummy-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ct-dummy
  template:
    metadata:
      labels:
        app: ct-dummy
        terraform: "false"
    spec:
      # volumes:
      #   - name: log-pvc
      #     persistentVolumeClaim:
      #       claimName: data-minio-0
      containers:
      - name: ct-dummy
        image: klimdos/python-flask-dummy
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        # volumeMounts:
        # - mountPath: /opt/logs
        #   name: log-pvc
