self-traning/manifests/ct-dummy/ct-dummy-lb.yml
kind: Service
apiVersion: v1
metadata:
  name:  ct-dummy-lb
spec:
  selector:
    app: ct-dummy
  type:  LoadBalancer
  ports:
  - name:  ui
    port:  80
    targetPort:  8000
