self-traning/manifests/ct-dummy/ct-dummy-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ct-dummy1-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ct-dummy1-svc-cluster-ip
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ct-dummy1-svc-cluster-ip
spec:
  selector:
    app: ct-dummy
  ports:
    - protocol: TCP
      port: 80
